adding the disassmebly to the debugger not that polished yet

--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -6,10 +6,13 @@ CFLAGS = -Wall -g
 SOURCE = sdb.c 
 TARGET = $(SOURCE:.c=)
 
+LIBNAME = capstone
+LIBPATH = -L/usr/lib/x86_64-linux-gnu/
+
 all: $(TARGET)
 
 $(TARGET): $(SOURCE)
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -o $@ $^ $(LIBPATH) -l$(LIBNAME)
 
 clean:
 	rm $(TARGET)
